# airflow_in_docker_compose

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  airflow.cfg  airflow_celeryexecutor.cfg  docker-compose-2.0-with-celery-executor-2-workers.yml  docker-compose-2.0-with-celery-executor.yml  docker-compose-celery-executor.yml  docker-compose-with-celery-executor-2-workers.yml  docker-compose-with-celery-executor.yml  docker-compose.yml  packages.pth  pyproject.toml
airflow_files/dags/: test_dag.py  test_dependency.py
archive/: docker-compose-v1-with-celery-executor.yml
archive/docker_with_puckel_image/: Dockerfile  airflow.cfg  airflow_celeryexecutor.cfg  docker-compose-celery-executor.yml
docker_with_puckel_image/: docker-compose-volume-packages.yml  docker-compose.yml
